Impliment Windowed Mode feature for d3d9

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -14,7 +14,11 @@ DSoundCtrl               = 0
 LoadPlugins              = 0
 LoadFromScriptsOnly      = 0
 
-[Window]
+[Windowed]
+EnableWindowMode         = 0
+WindowModeBorder         = 0
+
+[FullScreen]
 FullScreen               = 0
 ForceWindowResize        = 0
 WaitForWindowChanges     = 0
