--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -35,7 +35,11 @@ SingleProcAffinity       = 0
 LoadPlugins              = 0
 LoadFromScriptsOnly      = 0
 
-[Window]
+[Windowed]
+EnableWindowMode         = 0
+WindowModeBorder         = 0
+
+[FullScreen]
 FullScreen               = 0
 ForceWindowResize        = 0
 SendAltEnter             = 0
