Implement FullscreenWindowMode support

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -37,6 +37,7 @@ LoadFromScriptsOnly      = 0
 
 [Windowed]
 EnableWindowMode         = 0
+FullscreenWindowMode     = 0
 WindowModeBorder         = 0
 
 [FullScreen]
