Minor dd7to9 update

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -6,9 +6,12 @@ RunProcess               =
 WaitForProcess           = 0
 
 [Compatibility]
+AntiAliasing             = 0
 D3d8to9                  = 0
+Dd7to9                   = 0
 DDrawCompat              = 0
 DSoundCtrl               = 0
+EnableVSync              = 0
 
 [Plugins]
 LoadPlugins              = 0
