--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -217,6 +217,7 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClCompile Include="DDrawCompat\v0.2.1\Time.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\UnmodifiedDDrawProcs.cpp" />
     <ClCompile Include="ddraw\ddraw.cpp" />
+    <ClCompile Include="ddraw\IClassFactory.cpp" />
     <ClCompile Include="ddraw\IDirect3DDeviceX.cpp" />
     <ClCompile Include="ddraw\IDirect3DEnumCallback.cpp" />
     <ClCompile Include="ddraw\IDirect3DMaterialX.cpp" />
@@ -463,6 +464,7 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClInclude Include="ddraw\AddressLookupTable.h" />
     <ClInclude Include="ddraw\ddraw.h" />
     <ClInclude Include="ddraw\ddrawExternal.h" />
+    <ClInclude Include="ddraw\IClassFactory.h" />
     <ClInclude Include="ddraw\IDirect3DDeviceX.h" />
     <ClInclude Include="ddraw\IDirect3DEnumCallback.h" />
     <ClInclude Include="ddraw\IDirect3DMaterialX.h" />
