--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -23,6 +23,7 @@ DDrawCompatDisableGDIHook = 0
 DisableHighDPIScaling    = 0
 DSoundCtrl               = 0
 DxWnd                    = 0
+EnableDdrawWrapper       = 0
 EnableVSync              = 0
 Force16bitColor          = 0
 Force32bitColor          = 0
