--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -42,14 +42,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)bin\Intermediate\$(Configuration)\$(ProjectName)\</IntDir>
-    <IncludePath>$(ProjectDir);libraries;DDrawCompat\Experimental;External\detours\src;DirectX81SDK\include;$(IncludePath)</IncludePath>
-    <LibraryPath>detours\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir);Libraries;DDrawCompat\Experimental;External\detours\src;Libraries\DirectX81SDK\include;$(IncludePath)</IncludePath>
+    <LibraryPath>Libraries\detours\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)bin\Intermediate\$(Configuration)\$(ProjectName)\</IntDir>
-    <IncludePath>$(ProjectDir);libraries;DDrawCompat\Experimental;External\detours\src;DirectX81SDK\include;$(IncludePath)</IncludePath>
-    <LibraryPath>detours\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir);Libraries;DDrawCompat\Experimental;External\detours\src;Libraries\DirectX81SDK\include;$(IncludePath)</IncludePath>
+    <LibraryPath>Libraries\detours\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -103,6 +103,7 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="d3d8\d3d8to9.cpp" />
     <ClCompile Include="d3d9\d3d9.cpp" />
     <ClCompile Include="d3d9\IDirect3D9Ex.cpp" />
     <ClCompile Include="d3d9\IDirect3DCubeTexture9.cpp" />
@@ -298,7 +299,6 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClCompile Include="Utils\Fullscreen.cpp" />
     <ClCompile Include="Utils\Utils.cpp" />
     <ClCompile Include="Utils\WriteMemory.cpp" />
-    <ClCompile Include="Wrappers\d3d8to9.cpp" />
     <ClCompile Include="Wrappers\wrapper.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -308,6 +308,7 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <None Include="Wrappers\wrapper.def" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="d3d8\d3d8to9.h" />
     <ClInclude Include="d3d9\AddressLookupTable.h" />
     <ClInclude Include="d3d9\d3d9.h" />
     <ClInclude Include="d3d9\d3d9External.h" />
@@ -546,7 +547,6 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClInclude Include="Wrappers\d3d11.h" />
     <ClInclude Include="Wrappers\d3d12.h" />
     <ClInclude Include="Wrappers\d3d8.h" />
-    <ClInclude Include="Wrappers\d3d8to9.h" />
     <ClInclude Include="Wrappers\d3d9.h" />
     <ClInclude Include="Wrappers\d3dim.h" />
     <ClInclude Include="Wrappers\d3dim700.h" />
