--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -62,6 +62,9 @@
     <Filter Include="External\d3d8to9">
       <UniqueIdentifier>{d3ef980f-69d1-43d8-ab8e-00771a620729}</UniqueIdentifier>
     </Filter>
+    <Filter Include="d3d8">
+      <UniqueIdentifier>{1ea8e20b-045b-45d7-96b9-ea311a4be3d5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DSoundCtrl\DSoundCtrl.cpp">
@@ -649,11 +652,11 @@
     <ClCompile Include="External\d3d8to9\source\lookup_table.cpp">
       <Filter>External\d3d8to9</Filter>
     </ClCompile>
-    <ClCompile Include="Wrappers\d3d8to9.cpp">
-      <Filter>Wrappers</Filter>
-    </ClCompile>
     <ClCompile Include="ddraw\IClassFactory.cpp">
       <Filter>ddraw</Filter>
+    </ClCompile>
+    <ClCompile Include="d3d8\d3d8to9.cpp">
+      <Filter>d3d8</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1430,11 +1433,11 @@
     <ClInclude Include="External\d3d8to9\source\lookup_table.hpp">
       <Filter>External\d3d8to9</Filter>
     </ClInclude>
-    <ClInclude Include="Wrappers\d3d8to9.h">
-      <Filter>Wrappers</Filter>
-    </ClInclude>
     <ClInclude Include="ddraw\IClassFactory.h">
       <Filter>ddraw</Filter>
+    </ClInclude>
+    <ClInclude Include="d3d8\d3d8to9.h">
+      <Filter>d3d8</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
