Move Logging to submodule
- Move basical logginf functions to submodule
- Add version and wininet wrappers
- Remove d3d10core, d3dim, d3d700, dxgi and vorbisFile wrappers

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "External/detours"]
 	path = External/detours
 	url = https://github.com/microsoft/detours
+[submodule "External/Logging"]
+	path = External/Logging
+	url = https://github.com/elishacloud/Logging
