--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -285,10 +285,10 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClCompile Include="External\d3d8to9\source\d3d8to9_volume.cpp" />
     <ClCompile Include="External\d3d8to9\source\d3d8types.cpp" />
     <ClCompile Include="External\d3d8to9\source\lookup_table.cpp" />
+    <ClCompile Include="External\Hooking\Hook.cpp" />
+    <ClCompile Include="External\Hooking\HotPatch.cpp" />
+    <ClCompile Include="External\Hooking\IATPatch.cpp" />
     <ClCompile Include="External\Logging\Logging.cpp" />
-    <ClCompile Include="Hooking\Hook.cpp" />
-    <ClCompile Include="Hooking\HotPatch.cpp" />
-    <ClCompile Include="Hooking\IATPatch.cpp" />
     <ClCompile Include="Libraries\d3dx9.cpp" />
     <ClCompile Include="libraries\dwmapi.cpp" />
     <ClCompile Include="libraries\uxtheme.cpp" />
@@ -529,8 +529,8 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClInclude Include="External\d3d8to9\source\d3d8types.hpp" />
     <ClInclude Include="External\d3d8to9\source\d3dx9.hpp" />
     <ClInclude Include="External\d3d8to9\source\lookup_table.hpp" />
+    <ClInclude Include="External\Hooking\Hook.h" />
     <ClInclude Include="External\Logging\Logging.h" />
-    <ClInclude Include="Hooking\Hook.h" />
     <ClInclude Include="Libraries\d3dx9.h" />
     <ClInclude Include="libraries\dwmapi.h" />
     <ClInclude Include="libraries\uxtheme.h" />
