--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -103,7 +103,7 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="d3d8\d3d8to9.cpp" />
+    <ClCompile Include="d3d8\d3d8.cpp" />
     <ClCompile Include="d3d9\d3d9.cpp" />
     <ClCompile Include="d3d9\IDirect3D9Ex.cpp" />
     <ClCompile Include="d3d9\IDirect3DCubeTexture9.cpp" />
@@ -307,7 +307,7 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <None Include="Wrappers\wrapper.def" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="d3d8\d3d8to9.h" />
+    <ClInclude Include="d3d8\d3d8External.h" />
     <ClInclude Include="d3d9\AddressLookupTable.h" />
     <ClInclude Include="d3d9\d3d9.h" />
     <ClInclude Include="d3d9\d3d9External.h" />
