Fix misc issues
- Fix issues with d3d9 cache
- Fix IDirect3D issues with switch statements
- Fix build warning

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -10,6 +10,7 @@ WaitForProcess           = 0
 
 [Compatibility]
 AntiAliasing             = 0
+AutoFrameSkip            = 0
 CacheClipPlane           = 0
 ConvertToDirectDraw7     = 0
 ConvertToDirect3D7       = 0
