Update submodules and update logging
Add option to disable logging and removed the cout

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -7,6 +7,7 @@ ExcludeProcess           =
 IncludeProcess           = 
 RunProcess               = 
 WaitForProcess           = 0
+DisableLogging           = 0
 
 [Compatibility]
 AntiAliasing             = 0
