--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -4,6 +4,7 @@ RealDllPath              =
 LoadCustomDllPath        = 
 RunProcess               = 
 WaitForProcess           = 0
+DisableLogging           = 0
 
 [Compatibility]
 AntiAliasing             = 0
