Add LegacyD3DResolutionHack to project
Include code from LegacyD3DResolutionHack to removes the artificial resolution limit from Direct3D 7 and below.

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -22,6 +22,7 @@ DDrawCompat20            = 0
 DDrawCompat21            = 0
 DDrawCompatExperimental  = 0
 DDrawCompatDisableGDIHook = 0
+DDrawResolutionHack      = 0
 DisableHighDPIScaling    = 0
 DSoundCtrl               = 0
 DxWnd                    = 0
